# pesto-gb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
core/: CMakeLists.txt  gameboy.cpp  gameboy.h
core/audio/: apu.cpp
core/audio/channels/: channel_1.h  channel_4.cpp
core/cpu/: cpu.cpp
core/cpu/instruction/: instruction_set.cpp  instruction_set.h
core/graphics/: ppu.cpp
core/io/: input.h
core/timer/: timer.h
desktop/: CMakeLists.txt
desktop/src/: main.cpp
desktop/src/sdl/: audio.cpp  audio.h  display.cpp  display.h
esp32/: .gitignore  CMakeLists.txt  filesystem.csv  platformio.ini  sdkconfig.defaults
esp32/src/: CMakeLists.txt  idf_component.yml  main.cpp
esp32/src/tasks/: audio_task.cpp  audio_task.h  display_task.cpp  display_task.h  emulator_task.cpp  emulator_task.h  input_task.cpp  input_task.h  task.h
src/: main.cpp
src/core/: gameboy.cpp  gameboy.h
src/core/audio/: apu.h
src/core/audio/channels/: channel_2.cpp  channel_3.cpp  channel_3.h
src/core/graphics/: ppu.h
src/core/memory/: cartridge.cpp  cartridge.h  memory.cpp  memory.h
src/core/memory/mbc/: mbc.h  mbc1.cpp  mbc3.cpp
src/desktop/: CMakeLists.txt  main.cpp
src/emulator/: gameboy.cpp  gameboy.h
src/emulator/audio/: apu.cpp  apu.h
src/emulator/audio/channels/: base_channel.cpp  base_channel.h  channel_1.cpp  channel_1.h  channel_2.cpp  channel_2.h  channel_3.cpp  channel_3.h  channel_4.cpp  channel_4.h
src/emulator/cpu/: cpu.cpp  cpu.h  registers.cpp  registers.h
src/emulator/cpu/instruction/: instruction_def.cpp  instruction_def.h  instruction_set.cpp  instruction_set.h
src/emulator/graphics/: ppu.cpp  ppu.h
src/emulator/io/: input.cpp  input.h
src/emulator/memory/: cartridge.cpp  cartridge.h  memory.cpp  memory.h
src/emulator/memory/mbc/: mbc.cpp  mbc.h  mbc0.cpp  mbc0.h  mbc1.h  mbc3.h  mbc5.cpp  mbc5.h
src/emulator/timer/: timer.cpp  timer.h
src/sdl/: audio.cpp  audio.h  display.cpp  display.h
